.provarCaches/00D5h000009Q6XQEA0/objects/provar__Test_Plan_Schedule_Job__c.object
<CustomObject>
    <fields>
        <fullName>provar__Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>provar__End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>provar__External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>provar__Settings__c</fullName>
        <label>Settings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>provar__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>provar__Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Aborted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>provar__Test_Plan_Schedule__c</fullName>
        <label>Test Plan Schedule</label>
        <referenceTo>provar__Test_Plan_Schedule__c</referenceTo>
        <relationshipLabel>Test Plan Schedule Jobs</relationshipLabel>
        <relationshipName>Test_Plan_Schedule_Jobs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>provar__Tracking_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <inlineHelpText>Used to track the job across the pipeline</inlineHelpText>
        <label>Tracking Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Test Plan Schedule Job</label>
    <nameField>
        <displayFormat>TPSJ-{000000000}</displayFormat>
        <label>Test Plan Schedule Job Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Plan Schedule Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>